--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,8 @@ header{
   font-weight: 700;
   padding: 17px 55px;
   margin-top: 33px;
+  display: inline-block;
+  text-decoration: none;
 }
 small{
   font-size: 12px;
@@ -134,6 +136,7 @@ footer{
   font-size: 18px;
   border-radius: 50px;
   padding: 12px 40px;
+  text-decoration: none;
 }
 @media (max-width: 1200px){
   .header-pretitle{
